denk dat het nu werkt

--- a/index.html
+++ b/index.html
@@ -400,144 +400,6 @@
 
 <!-- Publications section -->
 <section class="projects-section bg-light fadeIn undisplayed" id="Publications">
-
-      <!-- <div class="container-fluid">
-        <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
-                <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
-                  <div id="accordion">
-                    <div class="card">
-                      <div class="card-header" id="headingOne">
-                        <h4 class="mb-0">
-                          <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                            Sign Language Translation in a Healthcare Setting
-                          </button>
-                        </h4>
-                        <p class="mb-4">
-                          <br>
-                          <b>Year:</b> 2021 <br>
-                          <b>Authors:</b> L.D. Esselink, S.M. Mende-Gillings, F. Roelofsen, A.S. Smeijers <br>
-                          <b>Type:</b> Manuscript submitted for publication <br>
-                          <i class="material-icons">download</i><a href="publications/COVID-19.pdf" download="COVID-19"> Download paper</a>
-                        </p>
-                      </div>
-                      <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-                        <div class="card-body">
-                          It is challenging for healthcare professionals to communicate with Deaf patients,
-                          especially in times of COVID-19. Sign language interpreters cannot always enter hospitals and
-                          clinics, and face masks make lipreading impossible.<br>
-                          We present an application which allows healthcare professionals to translate sentences
-                          that are frequently used in the diagnosis and treatment of COVID-19 from Dutch into Sign
-                          Language of the Netherlands (NGT). Translations are displayed by means of videos and
-                          avatar animations. The architecture of the system is such that it could be straightforwardly
-                          extended to other sign languages. We gratefully acknowledge funding from the Netherlands
-                          Organisation for Innovation in Healthcare (ZonMw) through the
-                    <a href="https://www.zonmw.nl/nl/over-zonmw/coronavirus/programmas/programma-detail/covid-19-programma/" target="_blank">COVID-19 programme</a>.
-                        </div>
-                      </div>
-                    </div>
-                    <div class="card">
-                      <div class="card-header" id="headingTwo">
-                        <h4 class="mb-0">
-                          <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            Multidimensionality in Sign Language Synthesis: Translation of Dutch into Sign Language of the Netherlands
-                          </button>
-                        </h4>
-                        <p class="mb-4">
-                          <br>
-                          <b>Year:</b> 2020 <br>
-                          <b>Author:</b> A.J. Corsel <br>
-                          <b>Type:</b> Bachelor thesis <br>
-                          <i class="material-icons">download</i><a href="publications/Corsel.pdf" download="Corsel">Download paper</a>
-                        </p>
-                      </div>
-                      <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                        <div class="card-body">
-                          This paper explores the implementation of a translator to sign language, using the JASigning avatarsoftware.
-                          Specifically, translation of Dutch into Sign Language of the Netherlands (NGT).
-                          As Dutch has been translated to a textual version of NGT in previous research, this research translated
-                          from textual NGT to synthesised NGT, the output signed by an avatar.
-                          This is one of three papers, each focusing on a different aspect of the translator: Lexical Resources,
-                          the Signing Space, and Multidimensionality. This paper pertains to the latter, and thus attempts to
-                          implement multiple dimensions into the avatar: the manual and non-manual component, which are both necessary
-                          to properly articulate a sign. The non-manual component of a sign being, for example, a facial expression,
-                          a head shake, the posture ofthe signer, etc. Specifically, it attempts to implement the non-manual markers
-                          paired with interrogative and negative constructs in NGT. Although the scope of this project is limited,
-                          it could provide a decent foundation for further research.
-                        </div>
-                      </div>
-                    </div>
-                    <div class="card">
-                      <div class="card-header" id="headingThree">
-                        <h4 class="mb-0">
-                          <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            The signing space for the synthesis of directional verbs in NGT
-                          </button>
-                        </h4>
-                        <p class="mb-4">
-                          <br>
-                          <b>Year:</b> 2020 <br>
-                          <b>Author:</b> S.M. Mede-Gillings <br>
-                          <b>Type:</b> Bachelor thesis <br>
-                          <i class="material-icons">download</i><a href="publications/Mende_Gillings.pdf" download="Mende_Gillings">Download paper</a>
-                        </p>
-                      </div>
-                      <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-                        <div class="card-body">
-                          Hearing parents who have deaf children are often put in a difficult position.
-                          They most likely know no sign language and resources for learning are limited and expensive.
-                          Research into sign language translation and synthesis has increased in the past two decades,
-                          due to a growing interest into making public spaces and services more accessible to Deaf people.<br>
-                          This research looks at the potential of a translator from Dutch to Dutch sign language (NGT)
-                          using a sign language avatar. In particular the focus lies on the synthesis of directional verbs,
-                          a critical grammatical component of sign language. The implementation is very limited and therefore
-                          the sentences it produces are not always comprehensible and the signs do not always look natural.
-                          It does, however, also demonstrate the potential of a sign language avatar as a tool for learning sign language.
-                        </div>
-                      </div>
-                    </div>
-                    <div class="card">
-                      <div class="card-header" id="headingFour">
-                        <h4 class="mb-0">
-                          <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                            Lexical resources for sign language synthesis: The translation of Dutch to Sign Language of the Netherlands
-                          </button>
-                        </h4>
-                        <p class="mb-4">
-                          <br>
-                          <b>Year:</b> 2020 <br>
-                          <b>Author:</b> L.D. Esselink <br>
-                          <b>Type:</b> Bachelor thesis <br>
-                          <i class="material-icons">download</i><a href="publications/Esselink.pdf" download="Esselink">Download paper</a>
-                        </p>
-                      </div>
-                      <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
-                        <div class="card-body">
-                          Deaf people oftentimes have no choice but to communicate in the lingua franca of their country,
-                          despite the fact that this is a second language for them. Their ability to read and write is
-                          significantly worse than that of a hearing person. Additionally, if a deaf child is born into a
-                          family of hearing parents, it is vital that the parents communicate with the child through sign
-                          language as soon as possible, otherwise the language region of that child's brain will be
-                          underdeveloped. There are currently few resources available for people to learn Sign Language
-                          of the Netherlands (NGT). A tool that makes this possible would be invaluable to those who need it. <br>
-                          This thesis investigates what components are necessary to build a system that uses an avatar to
-                          translate a Dutch sentence to NGT. On the basis of the workings of NGT and previous research on
-                          the matter, three main components are devised and implemented: software for sign language synthesis,
-                          lexical resources for encoding signs, and grammatical resources for structuring sentences.
-                          Results show a proof of concept with a corpus of 2226 signs, the ability to make correct use of
-                          classifiers, and the abilities to fingerspell any word that is not in the corpus and convey numbers
-                          correctly. However, the corpus contains a number of errors and of which manual errors and unnatural
-                          mouth signs should particularly be improved. Moreover, further research is necessary to improve the
-                          comprehensibility of signs.
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-            </div>
-      </div>
-
-</section> -->
-
 <div class="container-fluid">
   <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
           <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
@@ -547,8 +409,8 @@
                 <b>Year:</b> 2021 <br>
                 <b>Authors:</b> L.D. Esselink, S.M. Mende-Gillings, F. Roelofsen, A.S. Smeijers <br>
                 <b>Type:</b> Manuscript submitted for publication <br>
-                <a href="publications/COVID-19.pdf" download="COVID-19">Download paper <i class="bi bi-download"></i></a>
-                <a href="#collapseOne" data-toggle="collapse" class="collapsed" aria-hidden="true">Abstract <i class="bi bi-chevron-down"></i></a>
+                <a href="publications/COVID-19.pdf" download="COVID-19">Download paper <i class="fa fa-download"></i></a>
+                <a href="#collapseOne" data-toggle="collapse" class="collapsed" aria-hidden="true">Abstract <i class="fa fa-chevron-down"></i></a>
               </p>
               <div id="collapseOne" class="collapse">
             <p class="mb-4">
@@ -574,8 +436,8 @@
                 <b>Year:</b> 2020 <br>
                 <b>Author:</b> A.J. Corsel <br>
                 <b>Type:</b> Bachelor thesis <br>
-                <a href="publications/Corsel.pdf" download="Corsel">Download paper <i class="bi bi-download"></i></a>
-                <a href="#collapseTwo" data-toggle="collapse" class="collapsed" aria-hidden="true">Abstract <i class="bi bi-chevron-down"></i></a>
+                <a href="publications/Corsel.pdf" download="Corsel">Download paper <i class="fa fa-download"></i></a>
+                <a href="#collapseTwo" data-toggle="collapse" class="collapsed" aria-hidden="true">Abstract <i class="fa fa-chevron-down"></i></a>
               </p>
               <div id="collapseTwo" class="collapse">
             <p class="mb-4">
@@ -602,8 +464,8 @@
               <b>Year:</b> 2020 <br>
               <b>Author:</b> L.D. Esselink <br>
               <b>Type:</b> Bachelor thesis <br>
-              <a href="publications/Esselink.pdf" download="Esselink">Download paper <i class="bi bi-download"></i></a>
-              <a href="#collapseThree" data-toggle="collapse" class="collapsed" aria-hidden="true">Abstract <i class="bi bi-chevron-down"></i></a>
+              <a href="publications/Esselink.pdf" download="Esselink">Download paper <i class="fa fa-download"></i></a>
+              <a href="#collapseThree" data-toggle="collapse" class="collapsed" aria-hidden="true">Abstract <i class="fa fa-chevron-down"></i></a>
             </p>
             <div id="collapseThree" class="collapse">
             <p class="mb-4">
@@ -635,8 +497,8 @@
               <b>Year:</b> 2020 <br>
               <b>Author:</b> S.M. Mede-Gillings <br>
               <b>Type:</b> Bachelor thesis <br>
-              <a href="publications/Mende_Gillings.pdf" download="Mende_Gillings">Download paper <i class="bi bi-download"></i></a>
-              <a href="#collapseFour" data-toggle="collapse" class="collapsed" aria-hidden="true">Abstract <i class="bi bi-chevron-down"></i></a>
+              <a href="publications/Mende_Gillings.pdf" download="Mende_Gillings">Download paper <i class="fa fa-download"></i></a>
+              <a href="#collapseFour" data-toggle="collapse" class="collapsed" aria-hidden="true">Abstract <i class="fa fa-chevron-down"></i></a>
             </p>
             <div id="collapseFour" class="collapse">
             <p class="mb-4">
