--- a/index.html
+++ b/index.html
@@ -404,28 +404,28 @@
   <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
           <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
             <div class="collapseTransform">
-            <h4>Sign Language Translation in a Healthcare Setting</h4>
+              <h4>Sign Language Translation in a Healthcare Setting</h4>
+                <p class="mb-4">
+                  <b>Year:</b> 2021 <br>
+                  <b>Authors:</b> L.D. Esselink, S.M. Mende-Gillings, F. Roelofsen, A.S. Smeijers <br>
+                  <b>Type:</b> Manuscript submitted for publication test<br>
+                  <a href="publications/COVID-19.pdf" download="COVID-19">Download paper <i class="fa fa-download"></i></a>
+                  <a href="#collapseOne" data-toggle="collapse" class="collapsed" aria-hidden="true">Abstract <i class="fa fa-chevron-down"></i></a>
+                </p>
+                <div id="collapseOne" class="collapse">
               <p class="mb-4">
-                <b>Year:</b> 2021 <br>
-                <b>Authors:</b> L.D. Esselink, S.M. Mende-Gillings, F. Roelofsen, A.S. Smeijers <br>
-                <b>Type:</b> Manuscript submitted for publication <br>
-                <a href="publications/COVID-19.pdf" download="COVID-19">Download paper <i class="fa fa-download"></i></a>
-                <a href="#collapseOne" data-toggle="collapse" class="collapsed" aria-hidden="true">Abstract <i class="fa fa-chevron-down"></i></a>
+                It is challenging for healthcare professionals to communicate with Deaf patients,
+                especially in times of COVID-19. Sign language interpreters cannot always enter hospitals and
+                clinics, and face masks make lipreading impossible.<br>
+                We present an application which allows healthcare professionals to translate sentences
+                that are frequently used in the diagnosis and treatment of COVID-19 from Dutch into Sign
+                Language of the Netherlands (NGT). Translations are displayed by means of videos and
+                avatar animations. The architecture of the system is such that it could be straightforwardly
+                extended to other sign languages. We gratefully acknowledge funding from the Netherlands
+                Organisation for Innovation in Healthcare (ZonMw) through the
+          <a href="https://www.zonmw.nl/nl/over-zonmw/coronavirus/programmas/programma-detail/covid-19-programma/" target="_blank">COVID-19 programme</a>.
               </p>
-              <div id="collapseOne" class="collapse">
-            <p class="mb-4">
-              It is challenging for healthcare professionals to communicate with Deaf patients,
-              especially in times of COVID-19. Sign language interpreters cannot always enter hospitals and
-              clinics, and face masks make lipreading impossible.<br>
-              We present an application which allows healthcare professionals to translate sentences
-              that are frequently used in the diagnosis and treatment of COVID-19 from Dutch into Sign
-              Language of the Netherlands (NGT). Translations are displayed by means of videos and
-              avatar animations. The architecture of the system is such that it could be straightforwardly
-              extended to other sign languages. We gratefully acknowledge funding from the Netherlands
-              Organisation for Innovation in Healthcare (ZonMw) through the
-        <a href="https://www.zonmw.nl/nl/over-zonmw/coronavirus/programmas/programma-detail/covid-19-programma/" target="_blank">COVID-19 programme</a>.
-            </p>
-            </div>
+              </div>
             </div>
             <hr class="d-none d-lg-block mb-0 ml-0" />
           </div>
