--- a/index.html
+++ b/index.html
@@ -409,8 +409,8 @@
                   <b>Year:</b> 2021 <br>
                   <b>Authors:</b> L.D. Esselink, S.M. Mende-Gillings, F. Roelofsen, A.S. Smeijers <br>
                   <b>Type:</b> Manuscript submitted for publication test<br>
-                  <a href="publications/COVID-19.pdf" download="COVID-19">Download paper <i class="fa fa-download"></i></a>
-                  <a href="#collapseOne" data-toggle="collapse" class="collapsed" aria-hidden="true">Abstract <i class="fa fa-chevron-down"></i></a>
+                  <a href="publications/COVID-19.pdf" download="COVID-19">Download paper <i class="bi bi-download"></i></a>
+                  <a href="#collapseOne" data-toggle="collapse" class="collapsed" aria-hidden="true">Abstract <i class="bi bi-chevron-down"></i></a>
                 </p>
                 <div id="collapseOne" class="collapse">
               <p class="mb-4">
@@ -436,8 +436,8 @@
                 <b>Year:</b> 2020 <br>
                 <b>Author:</b> A.J. Corsel <br>
                 <b>Type:</b> Bachelor thesis <br>
-                <a href="publications/Corsel.pdf" download="Corsel">Download paper <i class="fa fa-download"></i></a>
-                <a href="#collapseTwo" data-toggle="collapse" class="collapsed" aria-hidden="true">Abstract <i class="fa fa-chevron-down"></i></a>
+                <a href="publications/Corsel.pdf" download="Corsel">Download paper <i class="bi bi-download"></i></a>
+                <a href="#collapseTwo" data-toggle="collapse" class="collapsed" aria-hidden="true">Abstract <i class="bi bi-chevron-down"></i></a>
               </p>
               <div id="collapseTwo" class="collapse">
             <p class="mb-4">
@@ -464,8 +464,8 @@
               <b>Year:</b> 2020 <br>
               <b>Author:</b> L.D. Esselink <br>
               <b>Type:</b> Bachelor thesis <br>
-              <a href="publications/Esselink.pdf" download="Esselink">Download paper <i class="fa fa-download"></i></a>
-              <a href="#collapseThree" data-toggle="collapse" class="collapsed" aria-hidden="true">Abstract <i class="fa fa-chevron-down"></i></a>
+              <a href="publications/Esselink.pdf" download="Esselink">Download paper <i class="bi bi-download"></i></a>
+              <a href="#collapseThree" data-toggle="collapse" class="collapsed" aria-hidden="true">Abstract <i class="bi bi-chevron-down"></i></a>
             </p>
             <div id="collapseThree" class="collapse">
             <p class="mb-4">
@@ -497,8 +497,8 @@
               <b>Year:</b> 2020 <br>
               <b>Author:</b> S.M. Mede-Gillings <br>
               <b>Type:</b> Bachelor thesis <br>
-              <a href="publications/Mende_Gillings.pdf" download="Mende_Gillings">Download paper <i class="fa fa-download"></i></a>
-              <a href="#collapseFour" data-toggle="collapse" class="collapsed" aria-hidden="true">Abstract <i class="fa fa-chevron-down"></i></a>
+              <a href="publications/Mende_Gillings.pdf" download="Mende_Gillings">Download paper <i class="bi bi-download"></i></a>
+              <a href="#collapseFour" data-toggle="collapse" class="collapsed" aria-hidden="true">Abstract <i class="bi bi-chevron-down"></i></a>
             </p>
             <div id="collapseFour" class="collapse">
             <p class="mb-4">
