--- a/index.html
+++ b/index.html
@@ -695,7 +695,9 @@
 <section class="projects-section bg-light fadeIn undisplayed" id="Projects">
     <div class="container-fluid">
         <!-- Challenge Row-->
-        <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
+        <div class="row align-items-start no-gutters mb-4 mb-lg-5">
+            <!-- Column for text -->
+            <div class="col-xl-6 col-lg-6">
             <!-- <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding"> -->
             <div class="project-text my-auto text-center text-lg-left no-top-padding">
                 <h4><a class="nav-link" href="https://projects.illc.uva.nl/signlanguage/covid19">COVID-19 ZonMw project</a></h4>
@@ -705,6 +707,11 @@
                 </p>
                 <hr class="d-none d-lg-block mb-0 ml-0" />
             </div>
+          </div>
+          <!-- Column for GIF -->
+          <div class="col-xl-6 col-lg-6">
+            <img src="htmlmovies/projects.gif" class="img-fluid" alt="Responsive image">
+          </div>
         </div>
     </div>
 </section>
