--- a/index2.html
+++ b/index2.html
@@ -493,7 +493,7 @@
                     <b>Year:</b> 2020 <br>
                     <b>Author:</b> S.M. Mede-Gillings <br>
                     <b>Type:</b> Bachelor thesis <br>
-                    <a href="#collapseFour" data-toggle="collapse">Abstract <i class="material-icons">arrow_drop_down</i></a>
+                    <a href="#collapseFour" data-toggle="collapse">Abstract <i class="material-icons" id="arrow_drop_down">arrow_drop_down</i></a>
                   </p>
                   <div id="collapseFour" class="collapse">
                   <p class="mb-4">
