videos niet movies

--- a/index.html
+++ b/index.html
@@ -710,7 +710,7 @@
           </div>
           <!-- Column for GIF -->
           <div class="col-xl-6 col-lg-6">
-            <img src="htmlmovies/projects.gif" class="img-fluid" alt="Responsive image">
+            <img src="htmlvideos/projects.gif" class="img-fluid" alt="Responsive image">
           </div>
         </div>
     </div>
