--- a/index.html
+++ b/index.html
@@ -401,7 +401,9 @@
 <!-- Publications section -->
 <section class="projects-section bg-light fadeIn undisplayed" id="Publications">
 <div class="container-fluid">
-  <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
+  <div class="row align-items-start no-gutters mb-4 mb-lg-5">
+      <!-- Column for text -->
+      <div class="col-xl-6 col-lg-6">
           <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
             <div class="collapseTransform">
               <h4>Sign Language Translation in a Healthcare Setting</h4>
@@ -517,6 +519,12 @@
             <hr class="d-none d-lg-block mb-0 ml-0" />
           </div>
       </div>
+      <!-- Column for GIF -->
+      <div class="col-xl-6 col-lg-6">
+        <img src="htmlvideos/publications.gif" class="img-fluid" alt="Avatar signing 'YOU MORE READ WANT?'">
+      </div>
+      </div>
+
 </div>
 
 </section>
