--- a/index.html
+++ b/index.html
@@ -99,7 +99,10 @@
 <section class="projects-section bg-light fadeIn" id="About">
     <div class="container-fluid">
         <!-- Challenge Row-->
-        <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
+        <div class="row align-items-start no-gutters mb-4 mb-lg-5">
+
+            <!-- Column for info -->
+            <div class="col-xl-6 col-lg-6">
                 <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
                  <!--  <div class="alert alert-success alert-dismissible">
                     <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
@@ -130,6 +133,11 @@
                     <hr class="d-none d-lg-block mb-0 ml-0" />
                 </div>
             </div>
+            <!-- Column for GIF -->
+            <div class="col-xl-6 col-lg-6">
+              <img src="htmlvideos/welcome.gif" class="img-fluid" alt="Avatar signing 'WE WHO?'">
+            </div>
+          </div>
     </div>
 </section>
 
@@ -389,6 +397,11 @@
                       Martine en Roos Wattel, <a href="https://www.wattelt.org/" target="_blank">Wat Telt!</a><br>
                     </p>
                 </div>
+            </div>
+
+            <!-- Column for GIF -->
+            <div class="col-xl-6 col-lg-6">
+              <img src="htmlvideos/people.gif" class="img-fluid" alt="Avatar signing 'WE WHO?'">
             </div>
         </div>
 
