--- a/index.html
+++ b/index.html
@@ -416,14 +416,14 @@
 <div class="container-fluid">
   <div class="row align-items-start no-gutters mb-4 mb-lg-5">
       <!-- Column for text -->
-      <div class="col-xl-6 col-lg-6">
+      <div class="col-8">
           <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
             <div class="collapseTransform">
               <h4>Sign Language Translation in a Healthcare Setting</h4>
                 <p class="mb-4">
                   <b>Year:</b> 2021 <br>
                   <b>Authors:</b> L.D. Esselink, S.M. Mende-Gillings, F. Roelofsen, A.S. Smeijers <br>
-                  <b>Type:</b> Manuscript submitted for publication test<br>
+                  <b>Type:</b> Manuscript submitted for publication<br>
                   <a href="publications/COVID-19.pdf" download="COVID-19">Download paper <i class="bi bi-download"></i></a>
                   <a href="#collapseOne" data-toggle="collapse" class="collapsed" aria-hidden="true">Abstract <i class="bi bi-chevron-down"></i></a>
                 </p>
@@ -533,7 +533,7 @@
           </div>
       </div>
       <!-- Column for GIF -->
-      <div class="col-xl-6 col-lg-6">
+      <div class="col-4">
         <img src="htmlvideos/publications.gif" class="img-fluid" alt="Avatar signing 'YOU MORE READ WANT?'">
       </div>
       </div>
@@ -718,7 +718,7 @@
         <!-- Challenge Row-->
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
             <!-- Column for text -->
-            <div class="col-xl-6 col-lg-6">
+            <div class="col-7">
             <!-- <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding"> -->
             <div class="project-text my-auto text-center text-lg-left no-top-padding">
                 <h4><a class="nav-link" href="https://projects.illc.uva.nl/signlanguage/covid19">COVID-19 ZonMw project</a></h4>
@@ -730,7 +730,7 @@
             </div>
           </div>
           <!-- Column for GIF -->
-          <div class="col-xl-6 col-lg-6">
+          <div class="col-5">
             <img src="htmlvideos/projects.gif" class="img-fluid" alt="Avatar signing 'OUR PROJECTS WHAT?'">
           </div>
         </div>
