--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
 
             <!-- Column for team -->
-            <div class="col-xl-6 col-lg-6">
+            <div class="col">
 
                 <!-- Team -->
                 <div class="project-text text-center text-lg-left no-top-padding">
@@ -378,7 +378,7 @@
 
             <!-- Column for collaborators -->
 
-            <div class="col-xl-6 col-lg-6">
+            <div class="col">
 
                 <div class="project-text text-center text-lg-left no-top-padding">
                     <h5>
@@ -400,7 +400,7 @@
             </div>
 
             <!-- Column for GIF -->
-            <div class="col-xl-6 col-lg-6">
+            <div class="col">
               <img src="htmlvideos/people.gif" class="img-fluid" alt="Avatar signing 'WE WHO?'">
             </div>
         </div>
