rare people layout weer weg

--- a/index.html
+++ b/index.html
@@ -384,43 +384,17 @@
                     <h5>
                       Collaborators and advisors
                     </h5>
-                    <h6>
-                      University of Amsterdam
-                    </h6>
+
                     <p class="text-black-50 mb-3">
-                      Beppie van den Bogaerde<br>
-                      Roland Pfau<br>
-                      Marijke Scheffener<br>
-                    </p>
-                    <h6>
-                      Amsterdam University Medical Centre
-                    </h6>
-                    <p class="text-black-50 mb-3">
-                      Anika Smeijers
-                    </p>
-                    <h6>
-                      University of Nijmegen
-                    </h6>
-                    <p class="text-black-50 mb-3">
-                      Onno Crasborn
-                    </p>
-                    <h6>
-                      University of Geneva
-                    </h6>
-                    <p class="text-black-50 mb-3">
-                      <a href="https://www.unige.ch/fti/en/faculte/departements/dtim/membrestim/david/" target="_blank">Bastien David</a>
-                    </p>
-                    <h6>
-                      University of East Anglia
-                    </h6>
-                    <p class="text-black-50 mb-3">
-                      <a href="https://people.uea.ac.uk/j_glauert" target="_blank">John Glauert</a>
-                    </p>
-                    <h6>
-                      <a href="https://www.wattelt.org/" target="_blank">Wat Telt!</a>
-                    </h6>
-                    <p class="text-black-50 mb-3">
-                      Martine en Roos Wattel
+                      Beppie van den Bogaerde, University of Amsterdam<br>
+                      Onno Crasborn, University of Nijmegen<br>
+                      <a href="https://www.unige.ch/fti/en/faculte/departements/dtim/membrestim/david/" target="_blank">Bastien David</a>,
+                        University of Geneva<br>
+                      Roland Pfau, University of Amsterdam<br>
+                      <a href="https://people.uea.ac.uk/j_glauert" target="_blank">John Glauert</a>, University of East Anglia<br>
+                      Marijke Scheffener, University of Amsterdam<br>
+                      Anika Smeijers, Amsterdam University Medical Centre<br>
+                      Martine en Roos Wattel, <a href="https://www.wattelt.org/" target="_blank">Wat Telt!</a><br>
                     </p>
                 </div>
             </div>
@@ -559,7 +533,7 @@
           </div>
       </div>
       <!-- Column for GIF -->
-      <div class="col-5">
+      <div class="col">
         <img src="htmlvideos/publications.gif" class="img-fluid" alt="Avatar signing 'YOU MORE READ WANT?'">
       </div>
       </div>
