--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
 
             <!-- Column for team -->
-            <div class="col">
+            <div class="col-3">
 
                 <!-- Team -->
                 <div class="project-text text-center text-lg-left no-top-padding">
@@ -343,7 +343,7 @@
                     <h5>Principal investigator</h5>
                     <p class="text-black-50 mb-3">
                       <a href="https://www.florisroelofsen.com/" target="_blank">
-                        Floris Roelofsen</a>,
+                        Floris Roelofsen</a>,<br>
                       University of Amsterdam<br>
                     </p>
 
@@ -352,8 +352,8 @@
                     </h5>
 
                     <p class="text-black-50 mb-3">
-                      Lyke Esselink, University of Amsterdam<br>
-                      Shani Mende-Gillings, University of Amsterdam<br>
+                      Lyke Esselink, <br>University of Amsterdam<br>
+                      Shani Mende-Gillings, <br>University of Amsterdam<br>
                     </p>
 
                     <h5>
@@ -386,21 +386,21 @@
                     </h5>
 
                     <p class="text-black-50 mb-3">
-                      Beppie van den Bogaerde, University of Amsterdam<br>
-                      Onno Crasborn, University of Nijmegen<br>
+                      Beppie van den Bogaerde, <br>University of Amsterdam<br>
+                      Onno Crasborn, <br>University of Nijmegen<br>
                       <a href="https://www.unige.ch/fti/en/faculte/departements/dtim/membrestim/david/" target="_blank">Bastien David</a>,
                         University of Geneva<br>
-                      Roland Pfau, University of Amsterdam<br>
+                      Roland Pfau, <br>University of Amsterdam<br>
                       <a href="https://people.uea.ac.uk/j_glauert" target="_blank">John Glauert</a>, University of East Anglia<br>
-                      Marijke Scheffener, University of Amsterdam<br>
-                      Anika Smeijers, Amsterdam University Medical Centre<br>
-                      Martine en Roos Wattel, <a href="https://www.wattelt.org/" target="_blank">Wat Telt!</a><br>
+                      Marijke Scheffener, <br>University of Amsterdam<br>
+                      Anika Smeijers, <br>Amsterdam University Medical Centre<br>
+                      Martine en Roos Wattel, <br><a href="https://www.wattelt.org/" target="_blank">Wat Telt!</a><br>
                     </p>
                 </div>
             </div>
 
             <!-- Column for GIF -->
-            <div class="col">
+            <div class="col-5">
               <img src="htmlvideos/people.gif" class="img-fluid" alt="Avatar signing 'WE WHO?'">
             </div>
         </div>
