laatste people die ik probeer

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
 
             <!-- Column for team -->
-            <div class="col">
+            <div class="col-7">
 
                 <!-- Team -->
                 <div class="project-text text-center text-lg-left no-top-padding">
@@ -380,7 +380,10 @@
             <!-- Column for GIF -->
             <div class="col-5">
               <img src="htmlvideos/people.gif" class="img-fluid" alt="Avatar signing 'WE WHO?'">
+            </div>
 
+            <!-- Column for Collaborators -->
+            <div class="col">
               <div class="project-text text-center text-lg-left no-top-padding">
                 <br><br>
                   <h5>
@@ -400,6 +403,8 @@
                   </p>
               </div>
             </div>
+
+
         </div>
 
 
