--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
             </div>
 
             <!-- Column for Collaborators -->
-            <div class="col">
+            <div class="col-12">
               <div class="project-text text-center text-lg-left no-top-padding">
                 <br><br>
                   <h5>
