--- a/index.html
+++ b/index.html
@@ -715,8 +715,8 @@
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
             <!-- Column for text -->
             <div class="col">
-            <!-- <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding"> -->
-            <div class="project-text my-auto text-center text-lg-left no-top-padding">
+            <div class="project-text pb-1 w-100 text-center text-lg-left no-top-padding">
+            <!-- <div class="project-text my-auto text-center text-lg-left no-top-padding"> -->
                 <h4><a class="nav-link" href="https://projects.illc.uva.nl/signlanguage/covid19"><img src="images/zonmw-logo.png" class="img-fluid" alt="ZonMW logo" id="responsive-logo">COVID-19 ZonMw project</a></h4>
                 <p class="mb-4">
                   As a result of COVID-19, the treatment and diagnosis of deaf patients has become more difficult. Facemasks are mandatory in many settings, making lipreading no longer an option and restrictions can inhibit access to sign language interpreters. This in turn limits effective communication between healthcare workers and deaf patients which is a problem in a setting where it is crucial. To help resolve this issue a tool was developed for translating question that are common in the diagnosis and treatment of COVID-19 into NGT. We gratefully acknowledge funding from the Netherlands Organisation for Innovation in Healthcare (ZonMw) through the
