--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             </div>
             <!-- Column for GIF -->
             <div class="col-5">
-              <img src="htmlvideos/welcome.gif" class="img-fluid" alt="Avatar signing 'WE WHO?'">
+              <img src="htmlvideos/welcome.gif" class="img-fluid" alt="Avatar signing 'HELLO. THIS WEBSITE OF SIGNLAB AMSTERDAM. WELCOME'">
             </div>
           </div>
     </div>
