gitignore mov,  upload gif demo

--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
     <p>
       We would like to emphasise that a qualified sign language interpreter should, whenever available, always be preferred over a machine translation system. Still, it is worth investigating the extent to which a machine translation system making use of avatar technology can be of help in situations in which a human interpreter cannot be employed.
    </p>
-   <input type="button" class="button" value="Demo" onclick="removeDisclaimer();">
+   <!-- <input type="button" class="button" value="Demo" onclick="removeDisclaimer();"> -->
+   <img src="htmlvideos/people.gif" class="img-fluid" alt="Avatar signing 'WE WHO?'" onclick="removeDisclaimer();startPose();">
   </div>
 
     <div id="avatarTranslator" class="undisplayed" style="width: 100%;">
