--- a/index.html
+++ b/index.html
@@ -142,14 +142,42 @@
 </section>
 
 
+<!-- About -->
+<section class="projects-section bg-light fadeIn" id="Translate">
+    <div class="container-fluid">
+        <!-- Challenge Row-->
+        <div class="row align-items-start no-gutters mb-4 mb-lg-5">
+
+            <!-- Column for info -->
+            <div class="col">
+                <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
+                  <h4>Disclaimer</h4>
+                   <p class="mb-4">
+                      The translation tool on this website explores the possibility of translating text to sign language using animated sign language avatars. It is meant to serve as an option for easing communication in situations where professional sign language interpreters cannot be employed, such as in healthcare. It is challenging for healthcare professionals to communicate with <b><a href="https://doi.org/10.1016/S0140-6736(11)61143-4" target="_blank">Deaf patients</a></b>, especially in times of <b><a href="https://doi.org/10.1001/jamaoto.2020.1705" target="_blank">COVID-19</a></b>. Sign language interpreters cannot always enter hospitals and clinics, facemasks make <b><a href="https://doi.org/10.1136/bmj.m2372" target="_blank">lipreading impossible</a></b> and interpreting via videorelay is not always viable. A demo is available of the translations of various sentences frequently used in the diagnosis and treatment of COVID-19 from Dutch into Sign Language of the Netherlans (NGT) to illustrate what is possible with sign language avatars.
+                    </p>
+                    <p>
+                      We would like to emphasise that a qualified sign language interpreter should, whenever available, always be preferred over a machine translation system. Still, it is worth investigating the extent to which a machine translation system making use of avatar technology can be of help in situations in which a human interpreter cannot be employed.
+                   </p>
+                </div>
+
+            </div>
+            <!-- Column for GIF -->
+            <div class="col-5">
+              <img src="htmlvideos/demo.gif" class="img-fluid" alt="Avatar signing 'YOU CURIOUS AUTOMATIC SIGN LANGUAGE TRANSLATION?'" onclick="openTab(event, 'TranslateDemo');startPose();">
+            </div>
+          </div>
+    </div>
+</section>
+
+
 
 <!--================================================================-->
 
 <!-- Translate -->
 
-<section class="projects-section bg-light fadeIn undisplayed" id="Translate">
+<section class="projects-section bg-light fadeIn undisplayed" id="TranslateDemo">
 
-  <div id="disclaimerAvatar" class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding" style="width: 70%;">
+  <!-- <div id="disclaimerAvatar" class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding" style="width: 70%;">
   <h4>Disclaimer</h4>
    <p class="mb-4">
       The translation tool on this website explores the possibility of translating text to sign language using animated sign language avatars. It is meant to serve as an option for easing communication in situations where professional sign language interpreters cannot be employed, such as in healthcare. It is challenging for healthcare professionals to communicate with <b><a href="https://doi.org/10.1016/S0140-6736(11)61143-4" target="_blank">Deaf patients</a></b>, especially in times of <b><a href="https://doi.org/10.1001/jamaoto.2020.1705" target="_blank">COVID-19</a></b>. Sign language interpreters cannot always enter hospitals and clinics, facemasks make <b><a href="https://doi.org/10.1136/bmj.m2372" target="_blank">lipreading impossible</a></b> and interpreting via videorelay is not always viable. A demo is available of the translations of various sentences frequently used in the diagnosis and treatment of COVID-19 from Dutch into Sign Language of the Netherlans (NGT) to illustrate what is possible with sign language avatars.
@@ -157,9 +185,9 @@
     <p>
       We would like to emphasise that a qualified sign language interpreter should, whenever available, always be preferred over a machine translation system. Still, it is worth investigating the extent to which a machine translation system making use of avatar technology can be of help in situations in which a human interpreter cannot be employed.
    </p>
-   <!-- <input type="button" class="button" value="Demo" onclick="removeDisclaimer();"> -->
-   <img src="htmlvideos/people.gif" class="img-fluid" alt="Avatar signing 'WE WHO?'" onclick="removeDisclaimer();startPose();">
-  </div>
+    <input type="button" class="button" value="Demo" onclick="removeDisclaimer();">
+   <img src="htmlvideos/demo.gif" class="img-fluid" alt="Avatar signing 'YOU CURIOUS AUTOMATIC SIGN LANGUAGE TRANSLATION?'" onclick="removeDisclaimer();startPose();">
+  </div> -->
 
     <div id="avatarTranslator" class="undisplayed" style="width: 100%;">
       <div id="alertMainTran" class="alertBox"></div>
