--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
    <img src="htmlvideos/demo.gif" class="img-fluid" alt="Avatar signing 'YOU CURIOUS AUTOMATIC SIGN LANGUAGE TRANSLATION?'" onclick="removeDisclaimer();startPose();">
   </div> -->
 
-    <div id="avatarTranslator" class="undisplayed" style="width: 100%;">
+    <div id="avatarTranslator" class="container-fluid" style="width: 100%;">
       <div id="alertMainTran" class="alertBox"></div>
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
