wat telt info algemene website

--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@
                     <p>
                       We would like to emphasise that a qualified sign language interpreter should, whenever available, always be preferred over a machine translation system. Still, it is worth investigating the extent to which a machine translation system making use of avatar technology can be of help in situations in which a human interpreter cannot be employed.
                    </p>
+                   <p>
+                     A video with general advice to healthcare professionals with deaf patients in times of COVID-19 is available on the <b><a href="https://www.wattelt.org/corona/" target="_blank">Wat Telt!</a></b> website. Additionally, this video teaches you fifteen essential signs. Would you like to learn more about the target audience of deaf and hard of hearing people and how to best provide assistance to these people? Sign up for the <b><a href="https://www.rino.nl/cursus/hulpverlening-dove-en-slechthorende-patinten" target="_blank">two-day course providing assistance to deaf and hard of hearing patients at RINO</a></b>! This course is taught by Dr. Anika Smeijers, Prof. Onno Crasborn and Roos Wattel.
+                   </p>
                 </div>
 
             </div>
