--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto" role="tablist">
-                <li class="nav-item"><a class="nav-link active" role="tab" href="#About" onclick="openTab(event, 'About');">Mission</a></li>
+                <li class="nav-item"><a class="nav-link active" role="tab" href="#About" onclick="openTab(event, 'About');">Welcome</a></li>
                 <li class="nav-item"><a class="nav-link" role="tab" href="#Translate" onclick="openTab(event, 'Translate');">Avatar Translation</a></li>
                 <li class="nav-item"><a class="nav-link" role="tab" href="#People" onclick="openTab(event, 'People');">People</a></li>
                 <li class="nav-item"><a class="nav-link" role="tab" href="#Publications" onclick="openTab(event, 'Publications');">Publications</a></li>
@@ -108,29 +108,30 @@
                     <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
                     <strong>Success!</strong> This alert box could indicate a successful or positive action.
                   </div> -->
-                    <h4>Sign language: Linguistic structure made visible</h4>
+                    <h5>Sign language: Linguistic structure made visible</h5>
                     <p class="mb-4">
-                      <!-- <img src="img/elise-1.jpg" class="rounded float-right" alt="" height="300"> -->
                       Investigating sign languages has the potential to yield important linguistic insights which are much more difficult to obtain by investigating spoken languages alone, because linguistic structures are sometimes much easier to detect in sign languages than in spoken languages. Quite literally, sign languages often make linguistic structure <b><a href="https://doi.org/10.1515/tl-2018-0012" target="_blank">directly visible</a></b>.
                     </p>
-                    <hr class="d-none d-lg-block mb-0 ml-0" />
+<!--                      <hr class="d-none d-lg-block mb-0 ml-0" />
                 </div>
-                <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
-                    <h4>Breaking language barriers</h4>
+                <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">  -->
+                    <h5>Breaking language barriers</h5>
                     <p class="mb-4">
                       Not only can science benefit from investigating sign languages; it also has an important role to play in diminishing the
-                      <b><a href="https://beeldverhalen.npofocus.nl/waarom-is-gebarentaal-nodig/?fbclid=IwAR3_XDN8TnlzN_WZ1l-jfN9rYIXkH_XmyOyNSgVzBREox3cxArkTL-k2G2I" target="_blank">language barrier</a></b> between deaf and hearing people. Deeper insights into the grammar of sign languages are essential in training sign language interpreters and to lay a solid foundation for sign language machine translation.
+                      <b><a href="https://beeldverhalen.npofocus.nl/waarom-is-gebarentaal-nodig/?fbclid=IwAR3_XDN8TnlzN_WZ1l-jfN9rYIXkH_XmyOyNSgVzBREox3cxArkTL-k2G2I" target="_blank">language barrier</a></b> between deaf and hearing people. Deeper insights into the grammar of sign languages are essential in training sign language interpreters and to lay a  foundation for sign language machine translation.
                     </p>
-                    <hr class="d-none d-lg-block mb-0 ml-0" />
+                    <!-- <hr class="d-none d-lg-block mb-0 ml-0" />
                 </div>
-                <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
-                    <h4>Our mission</h4>
+                <div class="project-text pb-1 w-100 my-auto text-center text-lg-left"> -->
+                    <h5>What we do</h5>
                     <p class="mb-4">
-                      We are pursuing deeper insights into sign language grammar, and we are using these insights to develop a machine translation system that can translate sentences from Dutch into Sign Language of the Netherlands (NGT), displayed by means of an animated avatar. We intend to apply this system in several settings, in particular to support parents of deaf children in the early stages of learning sign language and to
-                      <b><a href="covid19/index.html" target="_blank">
-                        improve communication between health care professionals and deaf patients.
-                      </a></b>
-                    <hr class="d-none d-lg-block mb-0 ml-0" />
+                      We are pursuing deeper insights into sign language grammar, and we are using these insights to develop machine translation tools that can translate sentences from Dutch into Sign Language of the Netherlands (NGT), displayed by means of an animated avatar. We are currently developing a 
+						<b><a href="covid19/index.html" target="_blank">
+                        tool to improve communication between health care professionals and deaf patients in times of COVID-19.
+                      </a></b>.
+                      In the future, we intend to develop several other applications, for instance to translate announcements at train stations and airports, or to support hearing parents of deaf children in learning sign language.
+                      
+                    <!-- <hr class="d-none d-lg-block mb-0 ml-0" /> -->
                 </div>
             </div>
             <!-- Column for GIF -->
@@ -763,10 +764,16 @@
             <div class="col">
             <div class="project-text pb-1 w-100 text-center text-lg-left no-top-padding">
             <!-- <div class="project-text my-auto text-center text-lg-left no-top-padding"> -->
-                <h4><a class="nav-link" href="https://projects.illc.uva.nl/signlanguage/covid19"><img src="images/zonmw-logo.png" class="img-fluid" alt="ZonMW logo" id="responsive-logo">  COVID-19 ZonMw project</a></h4>
+                <h4>Communication between healthcare professionals and deaf patients in times of COVID-19</h4>
                 <p class="mb-4">
-                  As a result of COVID-19, the treatment and diagnosis of deaf patients has become more difficult. Facemasks are mandatory in many settings, making lipreading no longer an option and restrictions can inhibit access to sign language interpreters. This in turn limits effective communication between healthcare workers and deaf patients which is a problem in a setting where it is crucial. To help resolve this issue a tool was developed for translating question that are common in the diagnosis and treatment of COVID-19 into NGT. We gratefully acknowledge funding from the Netherlands Organisation for Innovation in Healthcare (ZonMw) through the
-            <a href="https://www.zonmw.nl/nl/over-zonmw/coronavirus/programmas/programma-detail/covid-19-programma/" target="_blank">COVID-19 programme</a>.
+                  <b>Grant type:</b> <a href="https://www.zonmw.nl/nl/over-zonmw/coronavirus/programmas/programma-detail/covid-19-programma/" target="_blank">ZonMW COVID-19 grant</a><br>
+                  <b>Project website:</b> <a href="https://projects.illc.uva.nl/signlanguage/covid19" target="_blank">click here</a> (password protected, email us to request access)<br>
+                  <b>Consortium:</b> SignLab Amsterdam, 
+                  <a href="https://www.amc.nl/web/home.htm" target="_blank">Amsterdam Medical Centre</a>,
+                  <a href="https://www.wattelt.org/" target="_blank">Wat Telt!</a> <br>
+                  <b>Year:</b> 2020 <br>
+ 				  <b>Summary:</b>               
+                  In times of COVID-19, communication between healthcare professionals and deaf patients is even more challenging than it usually is. Facemasks are mandatory in many settings, making lipreading impossible, and restrictions can limit access to sign language interpreters. To help resolve this issue a tool was developed for translating questions and statements that are common in the diagnosis and treatment of COVID-19 from Dutch to Sign Language of the Netherlands. Translations are displayed by means of videos and animated avatars.
                 </p>
                 <hr class="d-none d-lg-block mb-0 ml-0" />
             </div>
