--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
                 <div class="project-text pb-1 w-100 my-auto text-center text-lg-left"> -->
                     <h5>What we do</h5>
                     <p class="mb-4">
-                      We are pursuing deeper insights into sign language grammar, and we are using these insights to develop machine translation tools that can translate sentences from Dutch into Sign Language of the Netherlands (NGT), displayed by means of an animated avatar. We are currently developing a 
+                      We are pursuing deeper insights into sign language grammar, and we are using these insights to develop machine translation tools that can translate sentences from Dutch into Sign Language of the Netherlands (NGT), displayed by means of an animated avatar. We are currently developing a
 						<b><a href="covid19/index.html" target="_blank">
                         tool to improve communication between health care professionals and deaf patients in times of COVID-19.
                       </a></b>.
                       In the future, we intend to develop several other applications, for instance to translate announcements at train stations and airports, or to support hearing parents of deaf children in learning sign language.
-                      
+
                     <!-- <hr class="d-none d-lg-block mb-0 ml-0" /> -->
                 </div>
             </div>
@@ -144,7 +144,7 @@
 
 
 <!-- About -->
-<section class="projects-section bg-light fadeIn" id="Translate">
+<section class="projects-section bg-light fadeIn undisplayed" id="Translate">
     <div class="container-fluid">
         <!-- Challenge Row-->
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
@@ -260,7 +260,7 @@
 
               <span id="language" class="flag-icon flag-icon-nl" onclick="changeLanguage();" data-toggle="tooltip" data-placement="bottom" title="Click on the flag to change the input language"></span>
               <!-- This button exists so that the ZonMw scripts know that the avatar option is active -->
-              <input type="radio" id="avatarDisplay" name="display" value="demo" class="undisplayed">
+              <input type="radio" id="avatarDisplay" name="display" value="demo" class="undisplayed" checked>
 
               <div id="minutesBox" class="varBox">
                <label for="minutes" style="display: inline-block;">Number of minutes:</label>
@@ -768,11 +768,11 @@
                 <p class="mb-4">
                   <b>Grant type:</b> <a href="https://www.zonmw.nl/nl/over-zonmw/coronavirus/programmas/programma-detail/covid-19-programma/" target="_blank">ZonMW COVID-19 grant</a><br>
                   <b>Project website:</b> <a href="https://projects.illc.uva.nl/signlanguage/covid19" target="_blank">click here</a> (password protected, email us to request access)<br>
-                  <b>Consortium:</b> SignLab Amsterdam, 
+                  <b>Consortium:</b> SignLab Amsterdam,
                   <a href="https://www.amc.nl/web/home.htm" target="_blank">Amsterdam Medical Centre</a>,
                   <a href="https://www.wattelt.org/" target="_blank">Wat Telt!</a> <br>
                   <b>Year:</b> 2020 <br>
- 				  <b>Summary:</b>               
+ 				  <b>Summary:</b>
                   In times of COVID-19, communication between healthcare professionals and deaf patients is even more challenging than it usually is. Facemasks are mandatory in many settings, making lipreading impossible, and restrictions can limit access to sign language interpreters. To help resolve this issue a tool was developed for translating questions and statements that are common in the diagnosis and treatment of COVID-19 from Dutch to Sign Language of the Netherlands. Translations are displayed by means of videos and animated avatars.
                 </p>
                 <hr class="d-none d-lg-block mb-0 ml-0" />
